# envguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: .env  envguard.toml
src/envguard/: __init__.py  cli.py  schema.py  validators.py
tests/: test_cli.py  test_schema.py  test_validators.py
